Added More Bootstrap Cards On Project Page

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
 		  					<div class="card card-body bg-light pb-0 pt-0.5">
 		  						<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
 		  					</div>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
 		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/gifcropped.webm" type="video/webm">
 							</video>
@@ -58,7 +59,10 @@
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<a class="btn btn-primary" href='model.html' role="button">View Web App</a>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Resolution program below:</p>
+		  					<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Resolution program below:</p>
+		  					</div>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
 		  					<img src="images/sr.jpg" alt="anime" class="responsive">
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -71,7 +75,10 @@
   					<details>
   						<summary>Controls Frenzy</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<p style="text-align: center;">Two Player <i>Bomberman</i> style game developed in C# where controls get randomized every round.</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+  								<p style="text-align: center;">Two Player <i>Bomberman</i> style game developed in C# where controls get randomized every round.</p>
+  							</div>
+  							<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary" href='https://vee-upatising.github.io/Controls-Frenzy/' role="button">View Web App</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Controls-Frenzy" role="button">View Code on Github</a>
@@ -82,14 +89,22 @@
   					<details>
   						<summary>Recycle Bot</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
+		  					</div>
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/re.gif" alt="demo" class="responsive">
 		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
+		  					<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
 		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
-		  					<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
+		  					<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Recycle-Bot" role="button">View Code on Github</a>
@@ -102,7 +117,10 @@
   					<details>
   						<summary>Deep Color</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/combined.jpg" alt="restored" class="responsive">  							
 		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Deep-Color" role="button">View Code on Github</a>
@@ -114,7 +132,10 @@
   					<details>
   						<summary>Vector Quantized Variational AutoEncoder</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Pokemon-VQVAE" role="button">View Code on Github</a>
@@ -137,7 +158,10 @@
   					<details>
   						<summary>Ms. Pac-Man Reinforcement Learning</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<video controls autoplay loop style = "max-width: 100%;">
 							  <source src="images/mspacman.mp4" type="video/mp4">
 							</video>
@@ -151,7 +175,10 @@
   					<details>
   						<summary>Unsupervised Learning Image Compression</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Using Principal Component Analysis and K-Means to compress images:</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Using Principal Component Analysis and K-Means to compress images:</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/PCA.png" alt="PCA" class="responsive">
 		  					<img src="images/KMEANS.png" alt="KMEANS" class="responsive">
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
@@ -164,7 +191,10 @@
   					<details>
   						<summary>Kernel Ridge Regression</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
+		  					</div>
+		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
 		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" class="responsive">
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
     	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Kernel-Ridge-Regression" role="button">View Code on Github</a>
