--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -34,69 +36,134 @@
 
 		  	<div style="height:15px;font-size:15px;">&nbsp;</div>
 
-			<img src="images/umass.jpg" alt="skateclub" class="responsive">
+		  	<div id="carousel" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+			    <li data-target="#carousel" data-slide-to="1"></li>
+			    <li data-target="#carousel" data-slide-to="2"></li>
+			    <li data-target="#carousel" data-slide-to="3"></li>
+			    <li data-target="#carousel" data-slide-to="4"></li>
+			    <li data-target="#carousel" data-slide-to="5"></li>
+			    <li data-target="#carousel" data-slide-to="6"></li>
+			    <li data-target="#carousel" data-slide-to="7"></li>
+			    <li data-target="#carousel" data-slide-to="8"></li>
+			    <li data-target="#carousel" data-slide-to="9"></li>
+			    <li data-target="#carousel" data-slide-to="10"></li>
+			    <li data-target="#carousel" data-slide-to="11"></li>
+			    <li data-target="#carousel" data-slide-to="12"></li>
+			    <li data-target="#carousel" data-slide-to="13"></li>
+			    <li data-target="#carousel" data-slide-to="14"></li>
+			    <li data-target="#carousel" data-slide-to="15"></li>
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img class="d-block w-100" src="images/umass.jpg" alt="First slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>UMass Skateboarding Club Meetup</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate2.jpg" alt="Second slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Kickflip Backside Tailslide</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate6.webp" alt="Third slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Tre Flip</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate7.webp" alt="Fourth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Wallie</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate8.webp" alt="Fifth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Tre Flip 50-50 Grind</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate15.jpeg" alt="Sixth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Rock To Fakie</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate13.webp" alt="Seventh slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Smith Grind</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate14.webp" alt="Eigth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Ollie</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate10.webp" alt="Ninth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Switch Frontside Shove-it</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate11.webp" alt="Tenth slide">
+				<div class="carousel-caption d-none d-md-block ">
+    					<p>Hardflip</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate12.webp" alt="Eleventh slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Varial Heelfip</p>
+    			  </div>
+			    </div>
+			     <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate3.webp" alt="Twelveth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Feeble Grind</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate4.webp" alt="Thirteenth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Backside Tailslide</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate1.webp" alt="Fourteenth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Backside 180 Ollie</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate5.webp" alt="Fifteenth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Frontside Noseslide</p>
+    			  </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="images/skate9.webp" alt="Sixteenth slide">
+			      <div class="carousel-caption d-none d-md-block ">
+    					<p>Laser Flip</p>
+    			  </div>
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
 
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate3.webp" alt="feeble" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-			
-			<img src="images/skate1.webp" alt="back180" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-			
-			<img src="images/skate2.jpg" alt="kickflip back tail" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-			
-			<img src="images/skate7.webp" alt="wallie" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-			
-			<img src="images/skate10.webp" alt="switch front shove" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate6.webp" alt="tre flip" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate4.webp" alt="back tail" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate8.webp" alt="tre flip fifty" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate9.webp" alt="laser" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate5.webp" alt="front nose" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate11.webp" alt="hardflip" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate12.webp" alt="varial heel" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate13.webp" alt="front smith" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate14.webp" alt="ollie" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
-
-			<img src="images/skate15.jpeg" alt="rock to fakie" class="responsive">
-
-			<div style="height:20px;font-size:15px;">&nbsp;</div>
+			<div style="height:15px;font-size:15px;">&nbsp;</div>
 
             <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/xKxLd0u6zSA?start=834&modestbranding=1" frameborder="0" allow="encrypted-media;" allowfullscreen></iframe></div>
 
@@ -111,8 +178,6 @@
 				</ul>
 			</footer>
 		</section>
-
-
 		<!-- Scripts -->
 			<script>
 				if ('addEventListener' in window) {
@@ -120,8 +185,5 @@
 					document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
 				}
 			</script>
-
-
-
 	</body>
 </html>
