Added Project Description Card
Added small explanation of what the Social Media Usage Analysis project was.

--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,10 @@
   					<details>
   						<summary>Social Media Usage Analysis</summary>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
+  							<div class="card card-body bg-light pb-0 pt-0.5">
+		  						<p>Analyzing my Instagram usage and predicting future trends with yearly, monthly, and weekly seasonality.</p>
+		  					</div>
+		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<a class="btn btn-primary" href='forecasting.html' role="button">View Web App</a>
   							<div style="height:15px;font-size:15px;">&nbsp;</div>
   							<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Instagram-Forecasting" role="button">View Code on Github</a>
