Projects Page Overhaul
New Projects page using Bootstrap cards. Page links to old projects page.

--- a/projects.html
+++ b/projects.html
@@ -16,219 +16,75 @@
   					<h1>Projects</h1>
   					<div style="height:15px;font-size:15px;">&nbsp;</div>
   					<p>I like to work on personal programming projects in my free time. I am specifically interested in Data Science and I do most of my work in Python and JavaScript.</p>
+            <!-- First row of projects -->
+            <div class="card-deck">
+              <div class="card">
+                <img class="card-img-top" src="images/demo.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Interactive GAN Application</h5>
+                  <p class="card-text" style="text-align: center;">Generating <i>anime</i> style faces using Deep Convolutional GANs. Generation is done real-time in your browser using a variety of inputs.</p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-primary" href='gan.html' role="button">View Web App</a>
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="images/demo_1.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Social Media Usage Analysis</h5>
+                  <p class="card-text" style="text-align: center;">Analyzing my Instagram usage and predicting future trends. Trends are fit to weekly, monthly, and yearly seasonalities.</p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-primary" href='forecasting.html' role="button">View Web App</a>
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="images/demo_2.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Real Time Virtual Background</h5>
+                  <p class="card-text" style="text-align: center;">Automatically replace the background of your live webcam feed. Allows you to upload your own background.</p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-primary" href='vb.html' role="button">View Web App</a>
+                </div>
+              </div>
+            </div>
 
-  					  <details>
-  						<summary>Interactive Generative Adversarial Networks</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary" href='gan.html' role="button">View Web App</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Generating cats and anime style faces using Deep Convolutional GANs. Interpolated sampling through the latent space of the generative model is visualized below:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<video controls autoplay loop style = "max-width: 100%;">
-							  <source src="images/gifcropped.webm" type="video/webm">
-							</video>
-							<div style="height:5px;font-size:5px;">&nbsp;</div>
-  							<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Anime-DCGAN" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
+            <div style="height:15px;font-size:15px;">&nbsp;</div>
 
-  					 <div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Social Media Usage Analysis</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Analyzing my Instagram usage and predicting future trends with yearly, monthly, and weekly seasonality.</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary" href='forecasting.html' role="button">View Web App</a>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Instagram-Forecasting" role="button">View Code on Github</a>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Real Time Virtual Background</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary" href='vb.html' role="button">View Web App</a>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Deep Learned Super Resolution</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary" href='model.html' role="button">View Web App</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Super sampling images to 4 times their original size using Convolutional Neural Networks. I compare <a href="https://pillow.readthedocs.io/en/3.1.x/reference/Image.html#PIL.Image.Image.resize"> Nearest Neighbor Interpolation</a> to my Deep Learned Super Resolution program below:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/flip.gif" alt="Switch Flip" class="responsive">
-		  					<img src="images/sr.jpg" alt="anime" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/DLSS" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Controls Frenzy</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-  								<p style="text-align: center;">Two Player <i>Bomberman</i> style game developed in C# where controls get randomized every round.</p>
-  							</div>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary" href='https://vee-upatising.github.io/Controls-Frenzy/' role="button">View Web App</a>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Controls-Frenzy" role="button">View Code on Github</a>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Recycle Bot</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Using machine learning to sort trash from recyclables on the Raspberry Pi 4.</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/re.gif" alt="demo" class="responsive">
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>I achieved the best results using Convolutional Neural Networks and Support Vector Machines. A visualization of a forward pass through the Neural Network as well as a heat map of the pixels that activated the final convolutional layer can be viewed below:</p>
-		  					</div>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/44.gif" alt="Forward Propagation" class="responsive">
-		  					<img src="images/HeatMap44.png" alt="HeatMap" class="responsive">
-		  					<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>I used Principal Component Analysis to project the data onto 3 dimensions and found a linear hyperplane that separates the two classes with 99.2% accuracy.</p>
-		  					</div>
-		  					<div style="height:5px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/SVM.jpg" alt="Support Vector Machine" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Recycle-Bot" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Deep Color</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Restoring The Color In Black & White Images Using Deep Convolutional GANs</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/combined.jpg" alt="restored" class="responsive">  							
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Deep-Color" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-  					
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Vector Quantized Variational AutoEncoder</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Using a Neural Network to come up with a image compression algorithm that takes up 37.5% of the space of the original image:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/vqvae.JPG" alt="Vector Quantized Variational AutoEncoder" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Pokemon-VQVAE" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Unsupervised Learning Image Segmentation</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/kmeans.JPG" alt="K-Means" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/K-Means-Image-Segmentation" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Ms. Pac-Man Reinforcement Learning</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Using Deep Q Networks to play Ms. Pac-Man:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<video controls autoplay loop style = "max-width: 100%;">
-							  <source src="images/mspacman.mp4" type="video/mp4">
-							</video>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Deep-Q-Network" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Unsupervised Learning Image Compression</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Using Principal Component Analysis and K-Means to compress images:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/PCA.png" alt="PCA" class="responsive">
-		  					<img src="images/KMEANS.png" alt="KMEANS" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/PCA" role="button">View Code on Github</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Kernel Ridge Regression</summary>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  							<div class="card card-body bg-light pb-0 pt-0.5">
-		  						<p>Kernel Ridge Regression and Basis Expanded Ridge Regression from scratch using NumPy:</p>
-		  					</div>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-		  					<img src="images/krr.jpg" alt="Kernel Ridge Regression" class="responsive">
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Kernel-Ridge-Regression" role="button">View Code on Github</a>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://www.kaggle.com/c/s20-589-hw1-datab/leaderboard" role="button">View Leaderboard Results</a>
-		  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
-
-  					<details>
-  						<summary>Machine Learning Generated Music</summary>
-	  						<div style="height:15px;font-size:15px;">&nbsp;</div>
-			  				<audio controls>
-	  						<source src="images/3.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/1.mp3" type="audio/mpeg">
-							</audio>
-							<div style="height:5px;font-size:15px;">&nbsp;</div>
-							<audio controls>
-		  						<source src="images/2.mp3" type="audio/mpeg">
-							</audio>
-  							<div style="height:15px;font-size:15px;">&nbsp;</div>
-    	  					<a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Music-Composition-GAN" role="button">View Code on Github</a>
-							<div style="height:15px;font-size:15px;">&nbsp;</div>
-  					</details>
-
-  					<div style="height:15px;font-size:15px;">&nbsp;</div>
+            <!-- Second row of projects -->
+            <div class="card-deck">
+              <div class="card">
+                <img class="card-img-top" src="images/demo_3.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Controls Frenzy</h5>
+                  <p class="card-text" style="text-align: center;">Two Player <i>Bomberman</i> style game. The controls get randomized every round and it's a race to figure them out before your opponent does!</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary" href='https://vee-upatising.github.io/Controls-Frenzy/' role="button">Play The Game</a>
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="images/demo_4.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Deep Learned Super Resolution</h5>
+                  <p class="card-text" style="text-align: center;">Super sampling images from <i>128x128</i> to <i>256x256</i> using Deep Convolutional GANs. Upload your own images and see the results!</p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-primary" href='model.html' role="button">View Web App</a>
+                </div>
+              </div>
+              <div class="card">
+                <img class="card-img-top" src="images/demo_5.gif" alt="demo">
+                <div class="card-body">
+                  <h5 class="card-title">Other Projects</h5>
+                  <p class="card-text" style="text-align: center;">View some of my old projects that don't have web applications but stil have visually interpretable results.</p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-primary" href='oldProjects.html' role="button">Old Projects</a>
+                </div>
+              </div>
+            </div>
 
 						<!-- Footer -->
 					<footer id="footer">
