--- a/gan.html
+++ b/gan.html
@@ -7,6 +7,8 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -48,12 +50,70 @@
 				      	<center><canvas id="myChart"></canvas></center>
 				  	  </div>
 
-				  	  <div id="result"></div>
-
-					  <div style="height:10px;font-size:5px;">&nbsp;</div>
+					  <div style="height:60px;font-size:60px;">&nbsp;</div>
 					  
 					  <h2 style = "font-weight: bold;">How It Works</h2>
-					  <img src="images/forward_propagation.gif" alt="Forward Propagation" class="responsive">
+
+				  	<div id="carousel" class="carousel slide" data-ride="carousel">
+					  <ol class="carousel-indicators">
+					    <li data-target="#carousel" data-slide-to="0" class="active"></li>
+					    <li data-target="#carousel" data-slide-to="1"></li>
+					    <li data-target="#carousel" data-slide-to="2"></li>
+					    <li data-target="#carousel" data-slide-to="3"></li>
+					    <li data-target="#carousel" data-slide-to="4"></li>
+					    <li data-target="#carousel" data-slide-to="5"></li>
+					    <li data-target="#carousel" data-slide-to="6"></li>
+					    <li data-target="#carousel" data-slide-to="7"></li>
+					    <li data-target="#carousel" data-slide-to="8"></li>
+					    <li data-target="#carousel" data-slide-to="9"></li>
+					  </ol>
+					  <div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img class="d-block w-100" src="images/keract1.jpg" alt="Input Layer">
+					      <div class="carousel-caption d-none d-md-block ">
+		    					<p style="color:black; font-weight: bold;">The model takes in 64 random numbers as noisy input.</p>
+		    			  </div>
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract2.jpg" alt="Convolutional Layer 1">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract3.jpg" alt="Convolutional Layer 2">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract4.jpg" alt="Convolutional Layer 3">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract5.jpg" alt="Convolutional Layer 4">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract6.jpg" alt="Convolutional Layer 5">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract7.jpg" alt="Convolutional Layer 6">
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract8.jpg" alt="Output Layer">
+					      <div class="carousel-caption d-none d-md-block ">
+		    					<p style="color:black; font-weight: bold;">The model outputs three <i>64x64</i> images each representing an RGB channel.</p>
+		    			  </div>
+					    </div>
+					    <div class="carousel-item">
+					      <img class="d-block w-100" src="images/keract9.jpg" alt="Result">
+					      <div class="carousel-caption d-none d-md-block ">
+		    					<p style="color:black; font-weight: bold;">The three images from the output layer combine to make this result.</p>
+		    			  </div>
+					    </div>
+					  </div>
+					  <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Previous</span>
+					  </a>
+					  <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					    <span class="sr-only">Next</span>
+					  </a>
+					</div>
 		  			  <div style="height:20px;font-size:15px;">&nbsp;</div>
 				    </center>
 			</div>
@@ -70,6 +130,11 @@
 		}
 		.btn-primary:hover {
 		    background-color: #224199;
+		}
+		.carousel-control-next,
+		.carousel-control-prev,
+		.carousel-indicators {
+		    filter: invert(100%);
 		}
 	</style>
 </html>
