Updated Project Description

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
                 <img class="card-img-top" src="images/demo.gif" alt="demo">
                 <div class="card-body">
                   <h5 class="card-title">Interactive GAN Application</h5>
-                  <p class="card-text" style="text-align: center;">Generating <i>anime</i> style faces using Deep Convolutional GANs. Generation is done real-time in your browser using a variety of inputs.</p>
+                  <p class="card-text" style="text-align: center;">Generating <i>anime</i> style faces using Deep Convolutional GANs. Generation is done real-time in your browser using TensorFlowJS.</p>
                 </div>
                 <div class="card-footer">
                   <a class="btn btn-primary" href='gan.html' role="button">View Web App</a>
