Updated GAN Instructions

--- a/gan.html
+++ b/gan.html
@@ -22,7 +22,7 @@
 				      		<h2>Interactive Generative Adversarial Networks</h2>
 				      	</div>
 					    <div class="card card-body bg-light pb-0 pt-0.5">
-						    <p style = "text-align:center; font-size:110%";>Drag the slider to use a Generative Adverarial Network to draw Anime style faces. Alternatively, you can press the 'Generate Random' button to generate a face from a random input instead.</p>
+						    <p style = "text-align:center; font-size:110%";>Drag the slider to use a Generative Adverarial Network to draw <i>anime</i> style faces. Alternatively, you can press the 'Generate Random' button to generate a face from a random input instead.</p>
 						</div>
 					  </div>
 					  <div style="height:15px;font-size:15px;">&nbsp;</div>
