Added New Tech Recruiting Project

--- a/oldProjects.html
+++ b/oldProjects.html
@@ -230,6 +230,16 @@
 
             <div style="height:15px;font-size:15px;">&nbsp;</div>
 
+            <details>
+              <summary>Tech Recruiting Analysis</summary>
+                <div style="height:15px;font-size:15px;">&nbsp;</div>
+                  <a class="btn btn-primary" href='https://vee-upatising.github.io/recruiting' role="button">View Web App</a>
+                <div style="height:15px;font-size:15px;">&nbsp;</div>
+                  <a class="btn btn-primary btn-sm" href="https://github.com/vee-upatising/Plotly-Sankey" role="button">View Code on Github</a>
+            </details>
+
+            <div style="height:15px;font-size:15px;">&nbsp;</div>
+
 						<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
