--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 						<header>
 							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
 							<h2>Vee Upatising</h2>
-							<h5 style="font-size:80%">Software Engineering</h5>
-							<h5 style="font-size:80%">Test Developer</h5>
-							<h5 style="font-size:80%">at <a href="https://workera.ai/">Workera.AI</a></h5>
+							<h5 style="font-size:80%">Automation</h5>
+							<h5 style="font-size:80%">Software Engineer</h5>
+							<h5 style="font-size:80%">at <a href="https://www.rocelec.com/">Rochester Electronics</a></h5>
 							<div style="height:5px;font-size:5px;">&nbsp;</div>
 							<a class="btn btn-primary btn-sm" href='assets/resume.pdf' role="button">View Resume</a>
 						    <div style="height:15px;font-size:5px;">&nbsp;</div>
