Rochester Electronics Job Update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/me.JPG" alt="" /></span>
+							<span class="avatar"><img src="images/veevee.PNG" alt="" /></span>
 							<h2>Vee Upatising</h2>
 							<h5 style="font-size:80%">Automation</h5>
 							<h5 style="font-size:80%">Software Engineer</h5>
