Added ZAM Certificate

--- a/certifications.html
+++ b/certifications.html
@@ -28,6 +28,11 @@
 						    <th>Recieved:</th>
 						  </tr>
 						  <tr>
+						    <td><p style="color:#6495ED;text-align:center;"><a href="assets/ZAM.pdf">Process Automation Controller</a></p></td>
+						    <td><a href="https://www.znt-richter.com/en">znt-richter</a></td>
+						    <td>November 2020</td>
+						  </tr>
+						  <tr>
 						    <td><p style="color:#6495ED;text-align:center;"><a href="https://app.workera.ai/public/candidate/certificate?code=ASNTE2Q0">Data Scientist</a></p></td>
 						    <td><a href="https://workera.ai/">Workera.AI</a></td>
 						    <td>June 2020</td>
